@@ -1,3 +1,13 @@
+2006-07-09  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* javax/swing/Timer.java
+	(setDelay): Throw IllegalArgumentException for negative delay,
+	(setInitialDelay): Likewise,
+	* javax/swing/ToolTipManager.java
+	(setInitialDelay): Document IllegalArgumentException,
+	(setDismissDelay): Likewise,
+	(setReshowDelay): Likewise.
+
 2006-07-09  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* java/lang/management/MemoryUsage.java:
